Extract createTableRelation helper into DeltaCommand trait