@@ -18,19 +18,10 @@ name := "example"
 organization := "com.example"
 organizationName := "example"
 
-val scala213 = "2.13.17"
+val scala212 = "2.12.17"
+val scala213 = "2.13.8"
+val deltaVersion = "3.0.0"
 val icebergVersion = "1.4.1"
-val unityCatalogVersion = "0.4.0"
-val jacksonVersion = "2.15.4"
-
-val defaultDeltaVersion = {
-  val versionFileContent = IO.read(file("../../version.sbt"))
-  val versionRegex = """.*version\s*:=\s*"([^"]+)".*""".r
-  versionRegex.findFirstMatchIn(versionFileContent) match {
-    case Some(m) => m.group(1)
-    case None => throw new Exception("Could not parse version from version.sbt")
-  }
-}
 
 def getMajorMinor(version: String): (Int, Int) = {
   val majorMinor = Try {
@@ -44,17 +35,9 @@ def getMajorMinor(version: String): (Int, Int) = {
         s"Please check https://docs.delta.io/latest/releases.html")
   }
 }
-// Maps Delta version (major, minor) to the compatible Spark version.
-// Used as a fallback for local dev when SPARK_VERSION env var is not set.
 val lookupSparkVersion: PartialFunction[(Int, Int), String] = {
-  // TODO: how to run integration tests for multiple Spark versions
-  case (major, minor) if major >= 4 && minor >= 1 => "4.1.0"
-  // version 4.0.0
-  case (major, minor) if major >= 4 => "4.0.0"
-  // versions 3.3.x+
-  case (major, minor) if major >= 3 && minor >=3 => "3.5.3"
-  // versions 3.0.0 to 3.2.x
-  case (major, minor) if major >= 3 && minor <=2 => "3.5.0"
+  // versions 3.0.0 and above
+  case (major, minor) if major >= 3 => "3.5.0"
   // versions 2.4.x
   case (major, minor) if major == 2 && minor == 4 => "3.4.0"
   // versions 2.3.x
@@ -75,7 +58,7 @@ val getScalaVersion = settingKey[String](
   s"get scala version from environment variable SCALA_VERSION. If it doesn't exist, use $scala213"
 )
 val getDeltaVersion = settingKey[String](
-  s"get delta version from environment variable DELTA_VERSION. If it doesn't exist, use $defaultDeltaVersion"
+  s"get delta version from environment variable DELTA_VERSION. If it doesn't exist, use $deltaVersion"
 )
 val getDeltaArtifactName = settingKey[String](
   s"get delta artifact name based on the delta version. either `delta-core` or `delta-spark`."
@@ -85,12 +68,13 @@ val getIcebergSparkRuntimeArtifactName = settingKey[String](
 )
 getScalaVersion := {
   sys.env.get("SCALA_VERSION") match {
-    case Some("2.13") | Some(`scala213`) =>
+    case Some("2.12") =>
+      scala212
+    case Some("2.13") =>
       scala213
     case Some(v) =>
       println(
-        s"[warn] Invalid  SCALA_VERSION. Expected one of {2.13, $scala213} but " +
-        s"got $v. Fallback to $scala213."
+        s"[warn] Invalid  SCALA_VERSION. Expected 2.12 or 2.13 but got $v. Fallback to $scala213."
       )
       scala213
     case None =>
@@ -104,35 +88,16 @@ version := "0.1.0"
 getDeltaVersion := {
   sys.env.get("DELTA_VERSION") match {
     case Some(v) =>
-      println(s"Using DELTA_VERSION Delta version $v")
+      println(s"Using Delta version $v")
       v
     case None =>
-      println(s"Using default Delta version $defaultDeltaVersion")
-      defaultDeltaVersion
+      deltaVersion
   }
 }
 
 getDeltaArtifactName := {
   val deltaVersion = getDeltaVersion.value
   if (deltaVersion.charAt(0).asDigit >= 3) "delta-spark" else "delta-core"
-}
-
-val getSparkPackageSuffix = settingKey[String](
-  s"get package suffix for cross-build artifact name from environment variable SPARK_PACKAGE_SUFFIX. " +
-  s"This is derived from CrossSparkVersions.scala (single source of truth)."
-)
-
-getSparkPackageSuffix := {
-  sys.env.getOrElse("SPARK_PACKAGE_SUFFIX", "")
-}
-
-val getSupportIceberg = settingKey[String](
-  s"get supportIceberg for cross-build artifact name from environment variable SUPPORT_ICEBERG. " +
-  s"This is derived from CrossSparkVersions.scala (single source of truth)."
-)
-
-getSupportIceberg := {
-  sys.env.getOrElse("SUPPORT_ICEBERG", "false")
 }
 
 getIcebergSparkRuntimeArtifactName := {
@@ -145,109 +110,27 @@ lazy val extraMavenRepo = sys.env.get("EXTRA_MAVEN_REPO").toSeq.map { repo =>
   resolvers += "Delta" at repo
 }
 
-lazy val java17Settings = Seq(
-  fork := true,
-  javaOptions ++= Seq(
-    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-  )
-)
-
-// Use SPARK_VERSION env var if set, otherwise fall back to lookupSparkVersion (for local dev)
-def resolveSparkVersion(deltaVersion: String): String = {
-  val envVersion = sys.env.getOrElse("SPARK_VERSION", "")
-  if (envVersion.nonEmpty) envVersion
-  else lookupSparkVersion.apply(getMajorMinor(deltaVersion))
-}
-
-def getLibraryDependencies(
-    deltaVersion: String,
-    deltaArtifactName: String,
-    icebergSparkRuntimeArtifactName: String,
-    sparkPackageSuffix: String,
-    scalaBinVersion: String,
-    supportIceberg: String): Seq[ModuleID] = {
-
-  // Package suffix comes from CrossSparkVersions.scala (single source of truth)
-  // e.g., "" for default Spark, "_4.1" for Spark 4.1
-  val deltaCoreDep = "io.delta" % s"${deltaArtifactName}${sparkPackageSuffix}_${scalaBinVersion}" % deltaVersion
-  val deltaIcebergDep = "io.delta" % s"delta-iceberg_${scalaBinVersion}" % deltaVersion
-
-  val resolvedSparkVersion = resolveSparkVersion(deltaVersion)
-
-  val baseDeps = Seq(
-    deltaCoreDep,
-    "org.apache.spark" %% "spark-sql" % resolvedSparkVersion,
-    "org.apache.spark" %% "spark-hive" % resolvedSparkVersion,
-    "org.apache.iceberg" % "iceberg-hive-metastore" % icebergVersion
-  )
-
-  // Include Iceberg dependencies only if supportIceberg is enabled
-  val icebergDeps = if (supportIceberg == "true") {
-    getMajorMinor(deltaVersion) match {
-      case (major, _) if major >= 4 =>
-        // Don't include the iceberg dependencies for 4.0.0rc1 and later
-        Seq.empty
-      case _ =>
-        Seq(
-          deltaIcebergDep,
-          "org.apache.iceberg" %% icebergSparkRuntimeArtifactName % icebergVersion,
-        )
-    }
-  } else {
-    Seq.empty
-  }
-
-  baseDeps ++ icebergDeps
-}
-
 lazy val root = (project in file("."))
   .settings(
     run / fork := true,
     name := "hello-world",
-    crossScalaVersions := Seq(scala213),
-    libraryDependencies ++= getLibraryDependencies(
-      getDeltaVersion.value,
-      getDeltaArtifactName.value,
-      getIcebergSparkRuntimeArtifactName.value,
-      getSparkPackageSuffix.value,
-      scalaBinaryVersion.value,
-      getSupportIceberg.value),
+    crossScalaVersions := Seq(scala212, scala213),
     libraryDependencies ++= Seq(
-      "io.unitycatalog" %% "unitycatalog-spark" % unityCatalogVersion excludeAll(
-        ExclusionRule(organization = "com.fasterxml.jackson.core"),
-        ExclusionRule(organization = "com.fasterxml.jackson.module"),
-        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
-        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
+      "io.delta" %% getDeltaArtifactName.value % getDeltaVersion.value,
+      "io.delta" %% "delta-iceberg" % getDeltaVersion.value,
+      "org.apache.spark" %% "spark-sql" % lookupSparkVersion.apply(
+        getMajorMinor(getDeltaVersion.value)
       ),
-      "io.unitycatalog" % "unitycatalog-server" % unityCatalogVersion excludeAll(
-        ExclusionRule(organization = "com.fasterxml.jackson.core"),
-        ExclusionRule(organization = "com.fasterxml.jackson.module"),
-        ExclusionRule(organization = "com.fasterxml.jackson.datatype"),
-        ExclusionRule(organization = "com.fasterxml.jackson.dataformat")
-      )
-    ),
-    dependencyOverrides ++= Seq(
-      "com.fasterxml.jackson.core" % "jackson-core" % jacksonVersion,
-      "com.fasterxml.jackson.core" % "jackson-annotations" % jacksonVersion,
-      "com.fasterxml.jackson.core" % "jackson-databind" % jacksonVersion,
-      "com.fasterxml.jackson.module" %% "jackson-module-scala" % jacksonVersion,
-      "com.fasterxml.jackson.dataformat" % "jackson-dataformat-yaml" % jacksonVersion,
-      "com.fasterxml.jackson.datatype" % "jackson-datatype-jsr310" % jacksonVersion,
-      "com.fasterxml.jackson.datatype" % "jackson-datatype-jdk8" % jacksonVersion
+      "org.apache.spark" %% "spark-hive" % lookupSparkVersion.apply(
+        getMajorMinor(getDeltaVersion.value)
+      ),
+      "org.apache.iceberg" %% getIcebergSparkRuntimeArtifactName.value % icebergVersion,
+      "org.apache.iceberg" % "iceberg-hive-metastore" % icebergVersion
     ),
     extraMavenRepo,
     resolvers += Resolver.mavenLocal,
     scalacOptions ++= Seq(
       "-deprecation",
       "-feature"
-    ),
-    // Conditionally exclude IcebergCompatV2.scala when supportIceberg is "false"
-    Compile / unmanagedSources / excludeFilter := {
-      if (getSupportIceberg.value == "false") {
-        HiddenFileFilter || "IcebergCompatV2.scala"
-      } else {
-        HiddenFileFilter
-      }
-    },
-    java17Settings
+    )
   )
